<FrameLayout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/AppTheme"
    android:layout_width="match_parent"
    android:layout_height="fill_parent"
    android:background="#0099cc"
    tools:context=".MainActivity" >

    <TextView
        android:id="@+id/fullscreen_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:keepScreenOn="true"
        android:textColor="#33b5e5"
        android:textSize="50sp"
        android:textStyle="bold" />

    <LinearLayout
        android:id="@+id/LinearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        android:orientation="vertical" >

        <FrameLayout
            android:id="@+id/videoFrame"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_gravity="top|center_vertical"
            android:layout_weight="1" >
        </FrameLayout>

        <LinearLayout
            android:id="@+id/fullscreen_content_controls"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center_horizontal"
            android:layout_margin="5dp"
            android:layout_marginBottom="5dp"
            android:background="@drawable/btn_default_holo_light"
            android:gravity="bottom|center_horizontal"
            android:orientation="horizontal"
            tools:ignore="UselessParent" >

            <ImageButton
                android:id="@+id/play_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/btn_default_holo_light"
                android:contentDescription="@string/play"
                android:src="@android:drawable/ic_media_play"
                android:text="@string/play" />

            <ImageButton
                android:id="@+id/pause_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/btn_default_holo_light"
                android:contentDescription="@string/pause"
                android:src="@android:drawable/ic_media_pause"
                android:text="@string/stop" />

            <RadioGroup
                android:id="@+id/modeGroup"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|center_horizontal"
                android:layout_marginLeft="40dp"
                android:layout_weight="1"
                android:orientation="horizontal" >

                <RadioButton
                    android:id="@+id/pub_button"
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:layout_gravity="center_vertical|center_horizontal"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_weight="1"
                    android:checked="true"
                    android:text="@string/publish" />

                <RadioButton
                    android:id="@+id/sub_button"
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:layout_gravity="center_vertical|center_horizontal"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_weight="1"
                    android:checked="false"
                    android:enabled="true"
                    android:text="@string/subscribe" />

            </RadioGroup>

            <ToggleButton
                android:id="@+id/runningState"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|center_horizontal"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="0dp"
                android:background="@drawable/btn_default_holo_light"
                android:checked="false"
                android:gravity="center"
                android:textAppearance="?android:attr/textAppearance"
                android:textOff="@string/start"
                android:textOn="@string/stop" />

        </LinearLayout>

    </LinearLayout>

</FrameLayout>